# 2D_game

./: Cargo.toml  README.md
config/: enemies.json  enemies_guns.json  enemy_sprites.json  gamedata.json  player_sprites.json  player_sprites_isometric.json
src/: '  animations.rs  boss.rs  bullet.rs  bullets.rs  camera.rs  enemies.rs  gamedata.rs  gun.rs  guns.rs  health.rs  main.rs  player.rs  spritesheets.rs  ui.rs  util.rs
