[package]
name = "office_scape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
bevy = "0.13.1"
bevy_math = "0.13.1"
rand = "0.8.5"

serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.116"
itertools = "0.12.1"



